--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -19,10 +19,11 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/boughton_andrew.html, people/bouquin_daina.html, people/bowman_ross.html,
   people/boyle_amy.html, people/bray_e.html, people/breckels_lisa.html, people/brin_lindsay.html,
   people/broman_karl.html, people/brown_amy.html, people/brown_ct.html, people/brown_kyler.html,
-  people/brunson_dana.html, people/bryan_j.html, people/brym_zachary.html, people/brynildsen-reinar_william.html,
-  people/burns_s.html, people/cabunoc_abigail.html, people/calhoun_patrick.html, people/camins-esakov_jared.html,
-  people/canino-koning_r.html, people/cannam_c.html, people/capes_gerard.html, people/caporaso_greg.html,
-  people/card_daren.html, people/carr_lindsay.html, people/carroll_ian.html, people/cartwright_reed.html,
+  people/brunson_dana.html, people/bryan_j.html, people/bryk_jarek.html, people/brym_zachary.html,
+  people/brynildsen-reinar_william.html, people/burns_s.html, people/cabunoc_abigail.html,
+  people/calhoun_patrick.html, people/camins-esakov_jared.html, people/canino-koning_r.html,
+  people/cannam_c.html, people/capes_gerard.html, people/caporaso_greg.html, people/card_daren.html,
+  people/carr_lindsay.html, people/carroll_ian.html, people/cartwright_reed.html,
   people/cerino_t.html, people/chamberlain_s.html, people/chan_cliburn.html, people/charbonneau_amanda.html,
   people/chase_john.html, people/chatzidimitriou_kyriakos.html, people/chen_daniel.html,
   people/chiapello_marco.html, people/chisholm_chelsea.html, people/choi_jin.html,
@@ -51,27 +52,27 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/ferreira-bocca_felipe.html, people/figueira_l.html, people/fishman_dmytro.html,
   people/fitzjohn_rich.html, people/flaxman_abraham.html, people/fonnesbeck_chris.html,
   people/fontenelle_hugues.html, people/ford_jes.html, people/ford_talitha.html, people/forstner_konrad.html,
-  people/fournier_auriel.html, people/fowler_philip.html, people/freeman_robert.html,
-  people/friedline_chris.html, people/fu_zhuo.html, people/fucile_geoffrey.html, people/furstenau_tara.html,
-  people/gacenga_francis.html, people/gallinger_jessica.html, people/gan_emilia.html,
-  people/garcia-algarra_javier.html, people/garcia-gutierrez_leonor.html, people/garcia_julian.html,
-  people/gardner_paul.html, people/garoutte_aaron.html, people/gates_chris.html, people/gatto_laurent.html,
-  people/ge_baolai.html, people/geiger_stuart.html, people/geldenhuis_andre.html,
-  people/ghaffari_noushin.html, people/gibling_heather.html, people/gibson_molly.html,
-  people/goble_c.html, people/gogoglou_antonia.html, people/gonzalez_ivan.html, people/gorman_gerard.html,
-  people/graham_laura.html, people/grande_bruno.html, people/gray_jeremy.html, people/gross_jonathan.html,
-  people/guignard_thomas.html, people/gustavsen_j.html, people/guy_t.html, people/guyer_jonathan.html,
-  people/guzman_melissa.html, people/haddock_s.html, people/haine_denis.html, people/hames_sam.html,
-  people/hamm_christopher.html, people/hamrick_jessica.html, people/hannon_eilis.html,
-  people/hansen_m.html, people/harihareswara_sumana.html, people/harris_rayna.html,
-  people/harrison_anthony.html, people/harstad_emelie.html, people/hart_t.html, people/hawke_ian.html,
-  people/hayek_wolfgang.html, people/held_fabian.html, people/henderson_donna.html,
-  people/henry_ian.html, people/heroux_martin.html, people/herr_joshua.html, people/hertweck_kate.html,
-  people/hetherington_james.html, people/hiebert_james.html, people/hinchliff_cody.html,
-  people/hinsen_k.html, people/hjelm_johan.html, people/ho_xavier.html, people/hocking_daniel.html,
-  people/hodge_amy.html, people/hodges_toby.html, people/hojjati_alireza.html, people/holdgraf_c.html,
-  people/hollister_jeff.html, people/hoyt_peter.html, people/huang_daisie.html, people/huff_k.html,
-  people/imamoglu_fatma.html, people/irving_d.html, people/ismiraldi_yuandra.html,
+  people/fournier_auriel.html, people/fowler_philip.html, people/fraser_andrew.html,
+  people/freeman_robert.html, people/friedline_chris.html, people/fu_zhuo.html, people/fucile_geoffrey.html,
+  people/furstenau_tara.html, people/gacenga_francis.html, people/gallinger_jessica.html,
+  people/gan_emilia.html, people/garcia-algarra_javier.html, people/garcia-gutierrez_leonor.html,
+  people/garcia_julian.html, people/gardner_paul.html, people/garoutte_aaron.html,
+  people/gates_chris.html, people/gatto_laurent.html, people/ge_baolai.html, people/geiger_stuart.html,
+  people/geldenhuis_andre.html, people/ghaffari_noushin.html, people/gibling_heather.html,
+  people/gibson_molly.html, people/goble_c.html, people/gogoglou_antonia.html, people/gonzalez_ivan.html,
+  people/gorman_gerard.html, people/graham_laura.html, people/grande_bruno.html, people/gray_jeremy.html,
+  people/gross_jonathan.html, people/guignard_thomas.html, people/gustavsen_j.html,
+  people/guy_t.html, people/guyer_jonathan.html, people/guzman_melissa.html, people/haddock_s.html,
+  people/haine_denis.html, people/hames_sam.html, people/hamm_christopher.html, people/hamrick_jessica.html,
+  people/hannon_eilis.html, people/hansen_m.html, people/harihareswara_sumana.html,
+  people/harris_rayna.html, people/harrison_anthony.html, people/harstad_emelie.html,
+  people/hart_t.html, people/hawke_ian.html, people/hayek_wolfgang.html, people/held_fabian.html,
+  people/henderson_donna.html, people/henry_ian.html, people/heroux_martin.html, people/herr_joshua.html,
+  people/hertweck_kate.html, people/hetherington_james.html, people/hiebert_james.html,
+  people/hinchliff_cody.html, people/hinsen_k.html, people/hjelm_johan.html, people/ho_xavier.html,
+  people/hocking_daniel.html, people/hodge_amy.html, people/hodges_toby.html, people/hojjati_alireza.html,
+  people/holdgraf_c.html, people/hollister_jeff.html, people/hoyt_peter.html, people/huang_daisie.html,
+  people/huff_k.html, people/imamoglu_fatma.html, people/irving_d.html, people/ismiraldi_yuandra.html,
   people/ivanov_p.html, people/jackson_m.html, people/jacobs_christian.html, people/james_nick.html,
   people/jarecka_dorota.html, people/jedrzejewski-szmek_zbigniew.html, people/ji_bo.html,
   people/johnson_ben.html, people/johnston_luke.html, people/johnston_myfanwy.html,
@@ -109,16 +110,17 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/milhans_jackie.html, people/mills_b.html, people/miotto_amanda.html, people/mistry_meeta.html,
   people/mitchell_i.html, people/mitchell_nora.html, people/mohr_christian-wilhelm.html,
   people/mokhtarzadeh_hamid.html, people/moore_jason.html, people/moore_nathan.html,
-  people/moore_timothy.html, people/morris_b.html, people/moyers_brook.html, people/mudrak_erika.html,
-  people/mueller_andreas.html, people/mueller_markus.html, people/munk_madicken.html,
-  people/munoz_ian.html, people/murtaza_ghulam.html, people/nagraj_vp.html, people/nahum_josh.html,
-  people/nakhoul_hani.html, people/namburi_sandeep.html, people/nandez_jose.html,
+  people/moore_timothy.html, people/morrell_thomas.html, people/morris_b.html, people/moyers_brook.html,
+  people/mudrak_erika.html, people/mueller_andreas.html, people/mueller_markus.html,
+  people/munk_madicken.html, people/munoz_ian.html, people/murtaza_ghulam.html, people/nagraj_vp.html,
+  people/nahum_josh.html, people/nakhoul_hani.html, people/namburi_sandeep.html, people/nandez_jose.html,
   people/navarro_francisco.html, people/nederbragt_l.html, people/neeb_moritz.html,
-  people/nenadic_aleksandra.html, people/neufeld_ryan.html, people/nielsen_daiva.html,
-  people/nielsen_jens.html, people/nilsson_matthias.html, people/norris_timothy.html,
-  people/nunez-iglesias_juan.html, people/ocais_alan.html, people/odell_allison-jai.html,
-  people/ogrady_tina.html, people/oleary_aaron.html, people/oliver_jeffrey.html, people/olson_r.html,
-  people/olsson_catherine.html, people/orendt_anita.html, people/orr_adam.html, people/ory_j.html,
+  people/nenadic_aleksandra.html, people/neufeld_ryan.html, people/ngo_linh.html,
+  people/nielsen_daiva.html, people/nielsen_jens.html, people/nilsson_matthias.html,
+  people/norris_timothy.html, people/nunez-iglesias_juan.html, people/ocais_alan.html,
+  people/odell_allison-jai.html, people/ogrady_tina.html, people/oleary_aaron.html,
+  people/oliver_jeffrey.html, people/olson_r.html, people/olsson_catherine.html, people/oneil_shawn.html,
+  people/orendt_anita.html, people/orr_adam.html, people/ory_j.html, people/osiecka_natalia.html,
   people/otsuji_reid.html, people/palamartchouk_kirill.html, people/palm_francisco.html,
   people/paulo_martin.html, people/pawlik_a.html, people/pearson_john.html, people/peek_ryan.html,
   people/pell_j.html, people/perez-suarez_david.html, people/perez_f.html, people/perignon_mariela.html,
@@ -134,42 +136,44 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/robinson_james.html, people/robinson_natalie.html, people/robinson_rosario.html,
   people/rohl_andrew.html, people/rokem_a.html, people/rosenfield_phil.html, people/rosner_jamie.html,
   people/ross_noam.html, people/rowell_bill.html, people/rugis_john.html, people/russo_dan.html,
-  people/ruttley_m.html, people/sadjadi_seyed-mahdi.html, people/sampath_ramesh.html,
-  people/sanders_shane.html, people/sane_maneesha.html, people/sarahan_michael.html,
-  people/schilling_martin.html, people/schloss_pat.html, people/schmeier_sebastian.html,
-  people/schmidt_marian.html, people/schneider_juliane.html, people/schoenrock_andrew.html,
-  people/schossau_j.html, people/schurch_anita.html, people/schwartz_rachel.html,
-  people/scopatz_a.html, people/selik_m.html, people/senyondo_henry.html, people/serra_neem.html,
-  people/shafquat_afrah.html, people/shambaugh_brent.html, people/sharan_malvika.html,
-  people/shaw_clara.html, people/shelton_j.html, people/shelton_jennifer.html, people/sheneman_leigh.html,
-  people/sherman_jason.html, people/shih_yu-ching.html, people/shiklomanov_alexey.html,
-  people/shkurti_ardita.html, people/shriwise_patrick.html, people/silva_raniere.html,
-  people/simpkin_sarah.html, people/simpson_jack.html, people/simpson_john.html, people/slaybaugh_rachel.html,
-  people/sloggett_clare.html, people/small_luc.html, people/smith_allison.html, people/smith_byron.html,
-  people/smith_daniel.html, people/smith_j.html, people/smithyman_brendan.html, people/smorul_mike.html,
-  people/soares-siqueira_abel.html, people/soderberg_courtney.html, people/soontiens_nancy.html,
-  people/speer_donald.html, people/srinath_ashwin.html, people/srinivasan_karthik.html,
-  people/st-onge_pier-luc.html, people/stachelek_joseph.html, people/stacy_mark.html,
-  people/stafford_jeff.html, people/standage_daniel.html, people/staneva_valentina.html,
-  people/stanton-cook_mitchell.html, people/stapleton_jim.html, people/staton_margaret.html,
-  people/steinbach_peter.html, people/stevens_sarah.html, people/stillwell_mark.html,
-  people/stimberg_marcel.html, people/strootman_jonathan.html, people/stubbs_daniel.html,
+  people/ruttley_m.html, people/rydbeck_halfdan.html, people/sadjadi_seyed-mahdi.html,
+  people/sampath_ramesh.html, people/sanders_shane.html, people/sane_maneesha.html,
+  people/sarahan_michael.html, people/schilling_martin.html, people/schloss_pat.html,
+  people/schmeier_sebastian.html, people/schmidt_marian.html, people/schneider_juliane.html,
+  people/schoenrock_andrew.html, people/schossau_j.html, people/schurch_anita.html,
+  people/schwartz_rachel.html, people/scopatz_a.html, people/selik_m.html, people/senyondo_henry.html,
+  people/serra_neem.html, people/shafquat_afrah.html, people/shambaugh_brent.html,
+  people/sharan_malvika.html, people/shaw_clara.html, people/shelton_j.html, people/shelton_jennifer.html,
+  people/sheneman_leigh.html, people/sherman_jason.html, people/shih_yu-ching.html,
+  people/shiklomanov_alexey.html, people/shkurti_ardita.html, people/shriwise_patrick.html,
+  people/silva_raniere.html, people/simpkin_sarah.html, people/simpson_jack.html,
+  people/simpson_john.html, people/slaybaugh_rachel.html, people/sloggett_clare.html,
+  people/small_luc.html, people/smith_allison.html, people/smith_byron.html, people/smith_daniel.html,
+  people/smith_j.html, people/smithyman_brendan.html, people/smorul_mike.html, people/soares-siqueira_abel.html,
+  people/soderberg_courtney.html, people/soontiens_nancy.html, people/speer_donald.html,
+  people/srinath_ashwin.html, people/srinivasan_karthik.html, people/st-onge_pier-luc.html,
+  people/stachelek_joseph.html, people/stacy_mark.html, people/stafford_jeff.html,
+  people/standage_daniel.html, people/staneva_valentina.html, people/stanton-cook_mitchell.html,
+  people/stapleton_jim.html, people/staton_margaret.html, people/steinbach_peter.html,
+  people/stevens_sarah.html, people/stillwell_mark.html, people/stimberg_marcel.html,
+  people/strong_dena.html, people/strootman_jonathan.html, people/stubbs_daniel.html,
   people/stueker_oliver.html, people/sumner_mike.html, people/sundaram_arvind.html,
   people/supp_s.html, people/svaksha.html, people/swaminathan_gayathri.html, people/taber-thomas_bradley.html,
-  people/tarkowski_leszek.html, people/tarvin_becca.html, people/tatman_rachael.html,
-  people/tavares_hugo.html, people/taylor_cody.html, people/teague_brian.html, people/teal_t.html,
-  people/telenczuk_bartosz.html, people/telenczuk_maria.html, people/terman_rochelle.html,
-  people/teucher_andrew.html, people/thelwall_simon.html, people/thoele_florian.html,
-  people/thomas_adam.html, people/thomson_samuel.html, people/thrimawithana_amali.html,
-  people/till_robert.html, people/timbers_tiffany.html, people/tomlinson_christopher.html,
-  people/tomsett_richard.html, people/tran_lina.html, people/trimble_will.html, people/troendle_tim.html,
-  people/turek_daniel.html, people/turner_s.html, people/tweedie_fiona.html, people/ugalde_juan.html,
-  people/ushizima_daniela.html, people/vahtras_olav.html, people/vaidyanathan_ramnath.html,
-  people/valls-guimera_roman.html, people/van-der-helm_edwin.html, people/van-der-walt_anelda.html,
-  people/van-heusden_peter.html, people/van-rossum_thea.html, people/van-schyndel_jay.html,
-  people/van-tuyl_steve.html, people/vandervalk_steven.html, people/vanichkina_darya.html,
-  people/varga_vicky.html, people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html,
-  people/via_allegra.html, people/viana_a.html, people/vilbig_kevin.html, people/von-bieberstein_philipp.html,
+  people/takemon_yuka.html, people/tarkowski_leszek.html, people/tarvin_becca.html,
+  people/tatman_rachael.html, people/tavares_hugo.html, people/taylor_cody.html, people/teague_brian.html,
+  people/teal_t.html, people/telenczuk_bartosz.html, people/telenczuk_maria.html,
+  people/terman_rochelle.html, people/teucher_andrew.html, people/thelwall_simon.html,
+  people/thoele_florian.html, people/thomas_adam.html, people/thomson_samuel.html,
+  people/thrimawithana_amali.html, people/till_robert.html, people/timbers_tiffany.html,
+  people/todd-brown_katherine.html, people/tomlinson_christopher.html, people/tomsett_richard.html,
+  people/tran_lina.html, people/trimble_will.html, people/troendle_tim.html, people/turek_daniel.html,
+  people/turner_s.html, people/tweedie_fiona.html, people/ugalde_juan.html, people/ushizima_daniela.html,
+  people/vahtras_olav.html, people/vaidyanathan_ramnath.html, people/valls-guimera_roman.html,
+  people/van-der-helm_edwin.html, people/van-der-walt_anelda.html, people/van-heusden_peter.html,
+  people/van-rossum_thea.html, people/van-schyndel_jay.html, people/van-tuyl_steve.html,
+  people/vandervalk_steven.html, people/vanichkina_darya.html, people/varga_vicky.html,
+  people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html, people/via_allegra.html,
+  people/viana_a.html, people/vilbig_kevin.html, people/von-bieberstein_philipp.html,
   people/vonderlinden_jens.html, people/wake_leanne.html, people/walker_andrew.html,
   people/walker_dawn.html, people/wallis_mike.html, people/walsh_alistair.html, people/warren_dan.html,
   people/wasser_leah.html, people/waterfall_josh.html, people/waugh_b.html, people/weaver_belinda.html,
