Adding assessment page to the drop down menu

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,6 +26,8 @@
     url: "/scf/awards/"
   - title: "Privacy Policy"
     url: "/privacy/"
+  - title: "Assesment"
+    url: "/assessment/"
 
 - title: "Workshops"
   url: "/workshops/"
