Correct assesment typo

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,7 +26,7 @@
     url: "/scf/awards/"
   - title: "Privacy Policy"
     url: "/privacy/"
-  - title: "Assesment"
+  - title: "Assessment"
     url: "/assessment/"
 
 - title: "Workshops"
