--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@
   - title: "Our Partners"
     url: "/scf/partners/"
   - title: "Become a Member Organization"
-    url: "/membership"
+    url: "/membership/"
   - title: "Our Voting Members"
     url: "/scf/members/"
   - title: "Our History"
