Special setting to parse HTML blocks

--- a/_config.yml
+++ b/_config.yml
@@ -82,6 +82,8 @@ paginate_path: "blog/page:num"
 
 # Theme works best with Kramdown (using the table of contents function)
 markdown: kramdown
+kramdown: 
+  parse_block_html: true
 permalink: /blog/:year/:month/:title.html
 highlight: pygments
 excerpt_separator: "<!--more-->"
