updating default inbox to team@carpentries.org

--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ filesurl: '/files'
 # FIXME: eliminate some of these (duplicate social media information)
 amy_url         : "https://amy.software-carpentry.org/workshops"
 board_inquiries : "board-inquiries@software-carpentry.org"
-contact         : "admin@software-carpentry.org"
+contact         : "team@carpentries.org"
 dc_url          : "http://datacarpentry.org"
 facebook_url    : "https://www.facebook.com/SoftwareCarpentry"
 github_url      : "https://github.com/swcarpentry"
