Adding some context

--- a/_data/alternative_uses_for_coding.yml
+++ b/_data/alternative_uses_for_coding.yml
@@ -1,3 +1,6 @@
+# Alternative ways to apply proggraming skills in non research contexts:
+#   Made live at: https://software-carpentry.org/alternative_uses_for_code/
+# Contributions welcome! click Edit and submit a PR 
 - Name: Brian Northan
   Text: "I direct a 4 mile running race near Albany, NY.  I've used Python and Pandas\
     \ for a few data analysis tasks. \n\nFor example I used Pandas and Bokeh to generate\
