Addition from twitter.

--- a/_data/alternative_uses_for_coding.yml
+++ b/_data/alternative_uses_for_coding.yml
@@ -93,3 +93,5 @@
 - Name: Pat Schloss
   Text: Wrote R scripts to automate sending out report cards/transcripts for a homeschool
     group
+- Name: Joseph Hardin
+  Text: [My girlfriend and I](https://twitter.com/JosephHardin7/status/983886964943409153) have a movie picking script. We each add one movie it randomizes and picks from all previously entered. The selected is removed from list and watched. Solves the problem of bias in movie selection.
