--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -70,9 +70,9 @@
   - title: "Join Us"
     url: "/join/"
   - title: "Donate"
-    url: "/join/donate/"
+    url: "https://carpentries.org/donate/"
   - title: "Our Instructors"
-    url: "/team/"
+    url: "https://carpentries.org/instructors/"
   - title: "Related Projects"
     url: "/join/projects/"
   - title: "Help Wanted"
