--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,26 +8,22 @@
   dropdown:
   - title: "About Us"
     url: "/about/"
-  - title: "FAQ"
-    url: "https://info.carpentries.org/"
   - title: "Code of Conduct"
-    url: "/conduct/"
+    url: "https://docs.carpentries.org/topic_folders/policies/code-of-conduct.html"
   - title: "Software Carpentry Foundation"
     url: "/scf/"
   - title: "Our Partners"
-    url: "/scf/partners/"
+    url: "https://carpentries.org/members/"
   - title: "Become a Member Organization"
-    url: "/membership/"
-  - title: "Our Voting Members"
-    url: "/scf/members/"
+    url: "https://carpentries.org/membership/"
   - title: "Our History"
     url: "/scf/history/"
   - title: "Community Service Awards"
     url: "/scf/awards/"
   - title: "Privacy Policy"
-    url: "/privacy/"
+    url: "https://docs.carpentries.org/topic_folders/policies/privacy.html"
   - title: "Assessment"
-    url: "/assessment/"
+    url: "https://carpentries.org/assessment/"
 
 - title: "Workshops"
   url: "/workshops/"
@@ -35,7 +31,7 @@
   dropdown:
   - title: "Our Workshops"
     url: "/workshops/"
-  - title: "Code of Conduct"
+  - title: "https://docs.carpentries.org/topic_folders/policies/code-of-conduct.html"
     url: "/conduct/"
   - title: "Request a Workshop"
     url: "/workshops/request/"
@@ -68,7 +64,7 @@
   side: left
   dropdown:
   - title: "Join Us"
-    url: "/join/"
+    url: "https://carpentries.org/community/"
   - title: "Donate"
     url: "https://carpentries.org/donate/"
   - title: "Our Instructors"
@@ -77,8 +73,6 @@
     url: "/join/projects/"
   - title: "Help Wanted"
     url: "/join/help/"
-  - title: "Subcommittees and Task Forces"
-    url: "/join/subcom_and_tf/"
   - title: "Reading Material"
     url: "/reading/"
 
