--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: ruby
 rvm:
-- 2.2.5
+- 2.5.3
 
 install: gem install yaml-lint
 
 before_script:
  - chmod +x ./bin/cibuild # or do this locally and commit
+ - chmod +x ./bin/add_amy.sh
 
 # Assume bundler is being used, therefore
 # # the `install` step will run `bundle install` by default.
@@ -13,6 +14,7 @@ script:
  - yaml-lint -q -n -i  $(find _posts -regex ".*.md\|.*html" )
  - yaml-lint -q -n -i  $(find pages -regex ".*.md\|.*html" ) 
  - ./bin/cibuild
+ - 'if [ "$TRAVIS_BRANCH" = "gh-pages" ] && [ "$TRAVIS_PULL_REQUEST" = "false"
 
 # # branch whitelist, only for GitHub Pages
 branches:
