--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install: gem install yaml-lint
 
 before_script:
  - chmod +x ./bin/cibuild # or do this locally and commit
- - chmod +x ./bin/add_amy.sh
+ - chmod +x ./bin/update_feeds.sh
 
 # Assume bundler is being used, therefore
 # # the `install` step will run `bundle install` by default.
