--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
  - yaml-lint -q -n -i  $(find _posts -regex ".*.md\|.*html" )
  - yaml-lint -q -n -i  $(find pages -regex ".*.md\|.*html" ) 
  - ./bin/cibuild
- - 'if [ "$TRAVIS_BRANCH" = "gh-pages" ] && [ "$TRAVIS_PULL_REQUEST" = "false" ]; then bash ./bin/add_amy.sh; fi'
+ - 'if [ "$TRAVIS_BRANCH" = "gh-pages" ] && [ "$TRAVIS_PULL_REQUEST" = "false" ]; then bash ./bin/update_feeds.sh; fi'
 
 # # branch whitelist, only for GitHub Pages
 branches:
