need to refer to "Members" not "Partners"

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@
     url: "https://docs.carpentries.org/topic_folders/policies/code-of-conduct.html"
   - title: "Software Carpentry Foundation"
     url: "/scf/"
-  - title: "Our Partners"
+  - title: "Our Members"
     url: "https://carpentries.org/members/"
   - title: "Become a Member Organization"
     url: "https://carpentries.org/membership/"
