add LC link to config

--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,7 @@ amy_url         : "https://amy.software-carpentry.org/workshops"
 board_inquiries : "board-inquiries@software-carpentry.org"
 contact         : "team@carpentries.org"
 dc_url          : "http://datacarpentry.org"
+lc_url          : "https://librarycarpentry.org"
 facebook_url    : "https://www.facebook.com/SoftwareCarpentry"
 github_url      : "https://github.com/swcarpentry"
 github_io_url   : "http://swcarpentry.github.io"
