--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -58,6 +58,8 @@
     url: "/lessons/dashboard/"
   - title: "Previous Material"
     url: "/lessons/previous/"
+  - title: "Curriculum Advisors"
+    url: "/curriculum-advisors/"
 
 - title: "Get Involved"
   url: "/join/"
