Add OpenDreamKit to related projects

--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -702,6 +702,7 @@ projects:
 - projects/mothur.html
 - projects/msl.html
 - projects/nipy.html
+- projects/opendreamkit.html
 - projects/open-tree-of-life.html
 - projects/pecan.html
 - projects/practical-computing-for-biologists.html
