--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
+dist: xenial
 language: ruby
 rvm:
 - 2.5.3
 
-install: gem install yaml-lint
+install:
+  - gem install yaml-lint
+  - python3 -m pip install --upgrade pip
+  - python3 -m pip install PyGitHub
 
 before_script:
  - chmod +x ./bin/cibuild # or do this locally and commit
