--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 install:
   - gem install yaml-lint
   - python3 -m pip install --upgrade pip setuptools wheel
-  - python3 -m pip install PyGitHub
+  - python3 -m pip install --user PyGitHub
 
 before_script:
  - chmod +x ./bin/cibuild # or do this locally and commit
