--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ filesurl: '/files'
 
 # Software Carpentry-specific configuration values.
 # FIXME: eliminate some of these (duplicate social media information)
-amy_url         : "https://amy.software-carpentry.org/workshops"
+amy_url         : "https://amy.carpentries.org/workshops"
 board_inquiries : "board-inquiries@software-carpentry.org"
 contact         : "team@carpentries.org"
 dc_url          : "http://datacarpentry.org"
