--- a/.github/workflows/build-website.yaml
+++ b/.github/workflows/build-website.yaml
@@ -21,9 +21,9 @@ jobs:
         uses: actions/checkout@master
 
       - name: Set up Ruby
-        uses: actions/setup-ruby@main
+        uses: actions/setup-ruby@v1
         with:
-          ruby-version: '2.7.1'
+          ruby-version: '2.7'
 
       - name: Set up Python
         uses: actions/setup-python@v2
