--- a/_config.yml
+++ b/_config.yml
@@ -227,7 +227,18 @@ og_description:                     "Feeling Responsive is built on the fabulous
 #
 # used in _includes/comments
 
-disqus_shortname: software-carpentry
+# disqus_shortname:
+
+
+#          __  __
+#   __  __/ /_/ /____  _________ _____  _____ ___  _____
+#  / / / / __/ __/ _ \/ ___/ __ `/ __ \/ ___// _ \/ ___/
+# / /_/ / /_/ /_/  __/ /  / /_/ / / / / /___/  __(__  )
+# \__,_/\__/\__/\___/_/   \__,_/_/ /_/\___(_)___/____/
+#
+
+utterances_gh_repo: carpentries/website-comments
+
 
 #      _____
 #     / ___/____ ___________
