--- a/.github/workflows/check-pull-requests.yml
+++ b/.github/workflows/check-pull-requests.yml
@@ -13,10 +13,10 @@ jobs:
 
     steps:
       - name: Checkout the Repository
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
 
       - name: Set up Ruby
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.7'
 
