redirects contact page directly to carpentries.org contact page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -94,7 +94,7 @@
     url: "/commenting/"
 
 - title: "Contact"
-  url: "/contact/"
+  url: "https://carpentries.org/contact/"
   side: right
 
 - title: "Search"
