--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ linkedin_url    : "https://www.linkedin.com/grp/home?gid=8279689"
 rss_url         : "http://software-carpentry.org/feed.xml"
 twitter_name    : "@swcarpentry"
 twitter_url     : "https://twitter.com/swcarpentry"
-slack_signup_url: "https://swc-slack-invite.herokuapp.com/"
+slack_signup_url: "http://slack-invite.carpentries.org/"
 msl_url         : "http://mozillascience.org"
 store_url       : "http://www.cafepress.com/swcarpentry"
 pad_url         : "http://pad.software-carpentry.org"
