Fix mistake in name

--- a/_data/governance_committee.yml
+++ b/_data/governance_committee.yml
@@ -12,7 +12,7 @@ people:
       url: https://github.com/quirksahern
 
 - name_personal: Valentina
-  name_family: Ahern
+  name_family: Hurtado-McCormick
   role: Co-chair
   github: vhmcck
   country: AU
